# cloudless-sky

./: .gitignore  BRIDGE_FIX_RELEASE.md  CHANGELOG.md  CONTRIBUTING.md  KNOWN-ISSUES.md  LICENSE  PATENT-NOTICE.md  README.md
.claude/: settings.local.json
.github/workflows/: publish-mcp-registry.yml  test.yml
benchmarks/sal-vs-json/: README.md  benchmark-results.json  benchmark.proto  benchmark.py  dpack-comparison.json  four-way-comparison.json  grammar-analysis-results.json  grammar-analysis.py  protobuf-comparison.py  sal-vs-json-vectors.json  token-analysis-results.json  tokenomics-multi-hop-results.json
docs/: DICTIONARY-UPDATE-RUNBOOK.md  SAL-efficiency-analysis.md  SAL-usage-doctrine-v1.md  macro-library-expansion-plan.md
docs/adr/: ADR-001-asd-generated-from-canonical-dictionary.md  ADR-002-go-asd-compiled-in-constant.md  ADR-003-not-sign-is-2-bytes.md  ADR-004-dictionary-basis-manifest.md  ADR-005-behavioral-vs-actuator-layers.md
docs/audit/: findings-41-48-research.md  findings-41-49-research.md
mcp/: README.md  server.json  server.py
mdr/_handoffs/: HANDOFF-MDR-AG.md  HANDOFF-MDR-FOOD.md  HANDOFF-MDR-MINING.md  HANDOFF-MDR-OILGAS.md
mdr/icd10cm/: MDR-ICD10CM-FY2026-blk.dpack
mdr/iso20022/: MDR-ISO20022-K-ISO-blk.dpack  MDR-ISO20022-MSG-FULL.csv
mdr/meshtastic/: meshtastic-macros.json
mdr/mitre-attack/: MDR-MITRE-ATTACK-ENT-v18.1-blk.dpack
mdr/pangram/: pangram-macro.json
osmp_mcp/: README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt  server.json  server.py
osmp_mcp/data/: MDR-ICD10CM-FY2026-blk.dpack  MDR-ISO20022-MSG-blk.dpack  canonical-test-vectors.json
protocol/: OSMP-semantic-dictionary-v12.csv  OSMP-semantic-dictionary-v13.csv  OSMP-semantic-dictionary-v14.csv  OSMP-semantic-dictionary-v15.csv
protocol/grammar/: SAL-grammar.ebnf
protocol/spec/: OSMP-SPEC-v1.0.2.md  OSMP-SPEC-v1.md
protocol/test-vectors/: canonical-test-vectors.json  full-test-results-350v.json
sdk/go/: CRYPTO_DEPENDENCY.md  README.md  go.mod  go.sum
sdk/go/osmp/: adp.go  api.go  asd.go  bael.go  benchmark.go  bridge.go  bridge_finding48_test.go  composer.go  dag.go  fnp.go  (+17 more)
sdk/python/: README.md  build.py  pyproject.toml
sdk/python/osmp/: __init__.py  bridge.py  core.py  crlibm.py  eml.py  eml_torch.py  fdlibm.py  pangram.py  protocol.py  wire.py
sdk/python/osmp/brigade/: __init__.py  base_helpers.py  orchestrator.py  parser.py  request.py
sdk/python/osmp/brigade/stations/: __init__.py  a_station.py  b_station.py  base.py  c_station.py  d_station.py  e_station.py  f_station.py  g_station.py  h_station.py  i_station.py  j_station.py  k_station.py  l_station.py  m_station.py  n_station.py  o_station.py  p_station.py  q_station.py  r_station.py  s_station.py  t_station.py  u_station.py  v_station.py  w_station.py  x_station.py  y_station.py  z_station.py
sdk/python/osmp/data/: OSMP-semantic-dictionary-v14.csv  OSMP-semantic-dictionary-v15.csv
sdk/python/src/: osmp.py  osmp_wire.py
sdk/python/tests/: test_bridge_fix.py  test_pangram.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/: chip_sweep.py  composition-comparison-results.json  composition-fidelity-test-v1.json  gen_flowchart.js  gen_flowchart_bw.js  layer3-roundtrip-results.json  panel-discovery-results.json  panel-full-sweep-results.json  panel_discovery.py  panel_full_sweep.py  panel_generation_measure.py  permutation_generator.py  phase1_brigade.py  phase1_composer.py  phase2_brigade_vs_mcp.py  phase2_llm.py  sonnet-v21-cold-responses.json  test_agent_roundtrip.py  test_asd_no_drift.py  test_bridge_frame_detection.py  test_bridge_pure_sal.py  test_brigade_parser.py  test_composition_comparison.py  test_composition_fidelity.py  test_dpack_cross_sdk.py  test_dx.py  test_icd10_real_keys.py  test_iso20022_msg_corpus.py  test_regulatory_dependency.py  test_sal_composer.py  test_sec.py  test_sec_real_crypto.py  test_tokenomics.py  weakness_measure.py  ztole-generation-results.json  ztole_discovery.py  ztole_full_sweep.py  ztole_generation_measure.py  ztole_lotus.py  ztole_lotus_doubles.py  (+2 more)
tests/input-classes/: TAXONOMY-v1.md  corpus-adversarial.json  corpus-edges.json  corpus-permutations.json  corpus-v2-expanded.json  corpus-ztole-vocab.json  corpus.json
tests/parity/: brigade_parity_vectors.json  gen_brigade_parity.py  gen_parity_vectors.py  parity_vectors.json
tests/results/: MORNING-REPORT-2026-04-26.md  phase1-brigade-adv-bridge.json  phase1-brigade-adv-bridge3.json  phase1-brigade-adv-v1.json  phase1-brigade-adv-v2.json  phase1-brigade-adv-v3.json  phase1-brigade-base-bridge.json  phase1-brigade-base-bridge3.json  phase1-brigade-base-bridge4.json  phase1-brigade-base-final.json  phase1-brigade-base-v10.json  phase1-brigade-base-v11.json  phase1-brigade-base-v12.json  phase1-brigade-base-v13.json  phase1-brigade-base-v3.json  phase1-brigade-base-v4.json  phase1-brigade-base-v5.json  phase1-brigade-base-v7.json  phase1-brigade-base-v8.json  phase1-brigade-base-v9.json  phase1-brigade-edges-bridge.json  phase1-brigade-edges-bridge3.json  phase1-brigade-edges-final.json  phase1-brigade-edges-v1.json  phase1-brigade-edges-v10.json  phase1-brigade-edges-v11.json  phase1-brigade-edges-v12.json  phase1-brigade-edges-v13.json  phase1-brigade-edges-v2.json  phase1-brigade-edges-v3.json  phase1-brigade-edges-v4.json  phase1-brigade-edges-v5.json  phase1-brigade-edges-v6.json  phase1-brigade-edges-v7.json  phase1-brigade-edges-v8.json  phase1-brigade-edges-v9.json  phase1-brigade-perms-bridge.json  phase1-brigade-perms-bridge3.json  phase1-brigade-perms-bridge4.json  phase1-brigade-perms-final.json  (+54 more)
tests/tier1/: dpack_test.go  finding49_test.go  fnp_basis_test.go  go.mod  test_adp.py  test_dictionary_basis.py  test_dictionary_basis.test.ts  test_dpack.ts  test_fnp_basis.py  test_fnp_basis.test.ts  test_macros.py  test_python.py  test_typescript.mjs
tests/tier2/: test_cross_sdk.py
tests/tier3/: test_dag.py  test_dag_ts.mjs
tools/: build_mdr_icd10cm.py  build_mdr_iso20022_msg.py  gen_asd.py  opcode_readability_test.py
(+56 files in other folders)
