[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osmp"
version = "2.0.1"
description = "OSMP -- Octid Semantic Mesh Protocol. Deterministic agentic instruction encoding."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Clay Holberg", email = "clay@octid.io" }]
keywords = ["osmp", "agentic", "mesh", "protocol", "semantic", "encoding", "lora", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dpack = ["zstandard>=0.21"]

[project.scripts]
osmp-benchmark = "osmp.protocol:run_benchmark_entry"

[project.urls]
Homepage = "https://github.com/Octid-io/cloudless-sky"
Documentation = "https://github.com/Octid-io/cloudless-sky/blob/main/protocol/spec/OSMP-SPEC-v1.md"
Repository = "https://github.com/Octid-io/cloudless-sky"
Issues = "https://github.com/Octid-io/cloudless-sky/issues"

[tool.setuptools.packages.find]
include = ["osmp*"]

[tool.setuptools.package-data]
osmp = ["data/*.csv"]
